<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="bluetooth">蓝牙</string>
    <string name="cancel">取消</string>
    <string name="douban">豆瓣</string>
    <string name="dropbox">Dropbox</string>
    <string name="email">邮件</string>
    <string name="evernote">印象笔记</string>
    <string name="facebook">Facebook</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="finish">完成</string>
    <string name="flickr">Flickr</string>
    <string name="foursquare">FourSquare</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="googleplus">Google+</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapaper_pwd">密码</string>
    <string name="kaixin">开心网</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="laiwang">来往</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="laiwangmoments">来往动态</string>
    <string name="line">Line</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="linkedin">领英</string>
    <string name="list_friends">%s的朋友</string>
    <string name="mingdao">明道</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="multi_share">图文分享</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="pinterest">Pinterest</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="pocket">Pocket</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="qq">QQ</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="qzone">QQ空间</string>
    <string name="refreshing">刷新中…</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="renren">人人网</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="share">分享</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_completed">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_title">分享</string>
    <string name="share_to">分享到</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="shortmessage">信息</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitter">Twitter</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="vkontakte">VK</string>
    <string name="website">http://www.mob.com</string>
    <string name="wechat">微信好友</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="yixin">易信</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="youdao">有道云笔记</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="folder_all">All Images</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="ok">确定</string>
    <string name="preview">Preview</string>
    <string name="select">Select</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="April24">4月24日</string>
    <string name="action_config">设置</string>
    <string name="action_more">更多</string>
    <string name="add_favorite">收藏</string>
    <string name="breakfast">早餐</string>
    <string name="breakfast_snack">上午加餐</string>
    <string name="budget_heat">预算热量</string>
    <string name="budget_heat_info">预算热量是减肥时每日饮食摄入的最佳热量值。只要依照预算热量控制饮食热量的摄入，就能够有效实现热量负平衡，达到减肥的目的。如果能再配合合理的运动，减肥效果更佳。</string>
    <string name="cart">购物车</string>
    <string name="city_next">下一步</string>
    <string name="curve_arm">手臂围</string>
    <string name="curve_brass">胸围</string>
    <string name="curve_hip">臀围</string>
    <string name="curve_shank">小腿围</string>
    <string name="curve_thigh">大腿围</string>
    <string name="curve_waist">腰围</string>
    <string name="curve_weight">体重</string>
    <string name="delete_favorite">取消收藏</string>
    <string name="directory">目录</string>
    <string name="eating_too_little">过低</string>
    <string name="estimate_food_baozi">包子</string>
    <string name="estimate_food_bread">面包</string>
    <string name="estimate_food_cereal">麦片</string>
    <string name="estimate_food_cooked">菜肴</string>
    <string name="estimate_food_mantou">馒头</string>
    <string name="estimate_food_noodles">面条</string>
    <string name="estimate_food_rice">米饭</string>
    <string name="friday">五</string>
    <string name="healthy_and_slim">正常</string>
    <string name="kcal">千卡</string>
    <string name="keyboard_dot">.</string>
    <string name="keyboard_eight">8</string>
    <string name="keyboard_five">5</string>
    <string name="keyboard_four">4</string>
    <string name="keyboard_nine">9</string>
    <string name="keyboard_one">1</string>
    <string name="keyboard_seven">7</string>
    <string name="keyboard_six">6</string>
    <string name="keyboard_three">3</string>
    <string name="keyboard_two">2</string>
    <string name="keyboard_zero">0</string>
    <string name="logout">退出登录</string>
    <string name="lunch">午餐</string>
    <string name="lunch_snack">下午加餐</string>
    <string name="micro_nutrients_name">名称</string>
    <string name="micro_nutrients_note">备注</string>
    <string name="micro_nutrients_value">摄入量</string>
    <string name="mobile_check_alert">"为了更好的为您提供服务
请填写手机号码"</string>
    <string name="mobile_check_captcha">获取验证码</string>
    <string name="mobile_check_captcha_hint">验证码</string>
    <string name="mobile_check_phone_hint">手机号码</string>
    <string name="mobile_check_voice_captcha">语音验证码</string>
    <string name="mobile_check_voice_captcha_alert">收不到短信, 试试</string>
    <string name="monday">一</string>
    <string name="order">订单</string>
    <string name="recommended_calories">建议摄入热量范围是:</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="supper">晚餐</string>
    <string name="supper_snack">晚上加餐</string>
    <string name="thursday">四</string>
    <string name="tuesday">二</string>
    <string name="up_flesh">过高</string>
    <string name="wednesday">三</string>
</resources>