<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/white" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sunday" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/monday" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tuesday" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wednesday" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/thursday" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/friday" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/small_font" android:textColor="@color/main_font_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/saturday" android:layout_weight="1.0" />
</LinearLayout>