<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/main" android:background="@color/global_main_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_curve" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/week_view" />
        <ViewFlipper android:id="@id/flipper" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <GridView android:gravity="center" android:id="@id/calendar" android:background="@color/divider_color" android:visibility="visible" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="-0.00999999dip" android:listSelector="@color/transparent" android:cacheColorHint="@color/transparent" android:verticalSpacing="1.0px" android:numColumns="7" />
        </ViewFlipper>
        <include layout="@layout/view_divide_line" />
    </LinearLayout>
    <HorizontalScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RadioGroup android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@id/rbtn_record_weight" android:checked="true" android:text="@string/curve_weight" style="@style/style_curve" />
            <RadioButton android:id="@id/rbtn_record_waist" android:text="@string/curve_waist" style="@style/style_curve" />
            <RadioButton android:id="@id/rbtn_record_brass" android:text="@string/curve_brass" style="@style/style_curve" />
            <RadioButton android:id="@id/rbtn_record_hip" android:text="@string/curve_hip" style="@style/style_curve" />
            <RadioButton android:id="@id/rbtn_record_arm" android:text="@string/curve_arm" style="@style/style_curve" />
            <RadioButton android:id="@id/rbtn_record_thigh" android:text="@string/curve_thigh" style="@style/style_curve" />
            <RadioButton android:id="@id/rbtn_record_shank" android:text="@string/curve_shank" style="@style/style_curve" />
        </RadioGroup>
    </HorizontalScrollView>
</RelativeLayout>