<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/white" android:padding="@dimen/m_dp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/global_font_small" android:textColor="@color/light_font_color" android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/micro_nutrients_name" android:layout_weight="2.0" />
    <TextView android:textSize="@dimen/global_font_small" android:textColor="@color/light_font_color" android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/micro_nutrients_value" android:layout_weight="3.0" />
    <TextView android:textSize="@dimen/global_font_small" android:textColor="@color/light_font_color" android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/micro_nutrients_note" android:layout_weight="2.0" />
</LinearLayout>